--- a/linke.html
+++ b/linke.html
@@ -20,7 +20,7 @@
 	<h2>页内链接</h2>
 	<a name="hotLink"></a>
 	<h2>热区链接</h2>
-	<img src="img/abc.jpg "width=300 alt=""usemap="#link">
+	<img src="linke/abc.jpg "width=300 alt=""usemap="#link">
 	<map name="link">
 		<area shape="rect" coords="30,0,300,300" href="http://www.baidu.com" alt="">
 		点图片右上角哦！
