--- a/jdkh.html
+++ b/jdkh.html
@@ -5,14 +5,17 @@
 	<title>Document</title>
 </head>
 <body>
-	<table width="300" border="1px" cellpdding="20" cellspacing="10" summary="学生信息表">
+	<table width="300" border="1px" cellpdding="0" cellspacing="1" summary="学生信息表">
 		<caption>学生信息表</caption>
 		<tr>
+			<thead>
 			<th>姓名</th>
 			<th>年龄</th>
 			<th>成绩</th>
 		</tr>
+		</thead>
 		<tr>
+		       <body>
 			<td>张三</td>
 			<td>20</td>
 			<td>100</td>
@@ -25,7 +28,7 @@
 		<tr>
 			<td>赵二傻</td>
 			<td>20</td>
-			<td>95</td>
+			<td>100</td>
 		</tr>
 		<tr>
 			<td>二宝</td>
