--- a/jdkh.html
+++ b/jdkh.html
@@ -8,7 +8,13 @@
 	<table width="300" border="1px" cellpdding="0" cellspacing="0" summary="学生信息表">
 		<caption>学生信息表</caption>
 		<tr>
-			<thead>
+            <thead>
+            <th colspan="2">1</th>
+            <th>2</th>
+            
+        </tr>
+        <thead>
+		<tr>
 			<th>姓名</th>
 			<th>年龄</th>
 			<th>成绩</th>
