--- a/uuu.html
+++ b/uuu.html
@@ -21,7 +21,7 @@
     .menu{
       width:;
       list-style: none;
-      border-bottom: 2px solid #4af;
+      border-bottom: 2px solid pansy;
       margin: 0px;
       height: 40px;
     }
